feat(jpa): 添加批量操作Specification支持和查询功能增强
- 在AbstractBulkOperationSpec中新增where(Specification)方法，支持复用Specification作为WHERE条件
- 为AuditEntityListener.destroy()方法添加synchronized保护，防止内存泄漏
- 移除BatchSaveTemplate中primitive数值类型的默认值判断逻辑
- 在BulkConditionSupport和ConditionalMethods中新增notStartsWith和notEndsWith方法
- 为CachedQueryResult添加TTL参数验证，防止负值和超过一年的设置
- 修正CHANGELOG.md中软删除方法名称描述
- 优化CteSpec中的参数替换逻辑，使用字面量替换避免正则性能问题
- 更新数据库产品名检测方式，使用Hibernate Session.doWork获取连接
- 为EncryptConverter添加Cipher实例ThreadLocal缓存，提升性能并防止泄漏
- 优化EntityClassResolver中的ID字段缓存实现
- 在EntityFieldExtractor中支持@Column(insertable = false)注解过滤
- 添加RepositoryBaseClassPostProcessor自动注册DefaultMyJpaRepository为仓库基类
- 更新MyJpaRepository接口文档，明确批量操作用法说明